--- a/styles.css
+++ b/styles.css
@@ -1,9 +1,9 @@
    /* styles.css */
    body {
-       background-color: #347928;
+       background-color: #C0EBA6;
    }
 
    h1 {
-     color: #C0EBA6
+     color: #347928
    }
 
