--- a/styles.css
+++ b/styles.css
@@ -1,9 +1,9 @@
    /* styles.css */
    body {
-       background-color: #C0EBA6;
+       background-color: #F1F6F5;
    }
 
    h1 {
-     color: #347928
+     color: #4B56D2
    }
 
