--- a/styles.css
+++ b/styles.css
@@ -1,9 +1,9 @@
    /* styles.css */
    body {
-       background-color: #F1F6F5;
+       background-color: #b0c4de;
    }
 
    h1 {
-     color: #4B56D2
+     color: #2a5298
    }
 
