--- a/styles.css
+++ b/styles.css
@@ -17,30 +17,6 @@
       font-size: 15px;
     }
     h1 {
-        padding-left: 70px; /* H1タグに20pxのパディングを設定 */
+        padding-left: 70px;
     }
    
-/*  ホームボタン  */
-#home-button{
-  width: 60px;
-  height: 60px;
-  background: #333;
-  z-index: 30;
-}
-#home-button a{
-  width: 100%;
-  height: 100%;
-  text-decoration: none;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-direction: column;
-  color: #fff;
-}
-#home-button a::before{
-  font-family: 'Font Awesome 5 Free';
-  font-weight: 900;
-  content: '\f015';
-  font-size: 1.5em;
-  color: #fff;
-}
